welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Int
	if (versLAvant==true) { for (i <- 1 to nbPas) {avance();}}
                                       ^Program:4: error: type mismatch;
 found   : Unit
 required: Int
	else {for (i <- 1 to nbPas) {recule();}}
                     ^